# meson-app-cpp

./: Dockerfile  README.md  meson.build  meson_options.txt
.github/workflows/: cd_docker.yml  ci_host_tester.yaml  ci_proj_builder.yaml
code/: app.c  app.cpp  app.h  app.hpp  main.c  main.cpp  meson.build
subprojects/: fscl-xutil-c.wrap  tscl-xcore-c.wrap  tscl-xstring.wrap  tscl-xtest-c.wrap  tscl-xutil-c.wrap
test/: meson.build  xtest_cases.c  xtest_cases.cpp  xunit_runner.c
